Fix graph index sidebar alignment

--- a/graphit/app/assets/stylesheets/application.scss
+++ b/graphit/app/assets/stylesheets/application.scss
@@ -145,5 +145,5 @@ a {
 
 .scroll-sidebar{
     padding-top: 71px;
-    padding-left: 170px;
+    padding-left: 210px;
 }
