--- a/graphit/app/assets/stylesheets/graph-index.css
+++ b/graphit/app/assets/stylesheets/graph-index.css
@@ -4,7 +4,6 @@
 
 .index-sidebar-container{
   text-align: left;
-  /*flex: 1;*/
   height: 100%;
   background-color: whitesmoke;
   position: fixed;
@@ -12,10 +11,11 @@
   top: 71px;
   padding-right: 20px;
   box-shadow: 1px 0 3px rgba(0,0,0,0.15);
+  box-sizing: border-box;
+  max-width: 205px;
 }
 
 .sidebar-head{
-  /*box-shadow: 0 4px 3px -3px rgba(0, 0, 0, 0.2);*/
   margin-top: 10px;
 }
 
